<resources>
    <string name="app_name">Bambino</string>
    <string name="app">Baby Monitor</string>
    <string name="set_phone">Set Phone for the </string>
    <string name="fragment_1_title">WELCOME!</string>
    <string name="fragment_1_context">You Can Monitor Your Baby Using Two Phones. Turn Your Smartphones Into Baby Monitors!</string>
    <string name="fragment_2_title">STEP 1: Mail</string>
    <string name="fragment_2_context">Log In The Both The Baby Phone And The Parent Phone On The Same Email. </string>
    <string name="fragment_3_title">STEP 2: Set Baby Phone</string>
    <string name="fragment_3_context">Start A Broadcast With A Clear View Of The Baby. Make Sure You Have Internet.</string>
    <string name="fragment_4_title">STEP 3: Set Parent Phone</string>
    <string name="fragment_4_context">Join The Broadcast. Stay Close To Your Baby Wherever You Are!</string>
    <string name="login_head">Login</string>
    <string name="skip"><u>Skip</u></string>
    <string name="get_started">Get Started!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Email</string>
    <string name="login">LOGIN</string>
    <string name="account">Don\'t have an account?  </string>
    <string name="sign_up"><u>Sign Up!</u></string>
    <string name="register">Register</string>
    <string name="register_button">REGISTER</string>
    <string name="register_account">Do you already have an account?   </string>
    <string name="mail_does_not_exist">This mail does not exist!</string>
    <string name="the_mail_is_already_registered">The email is already registered!</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="password_not_match">The passwords do not match!</string>
    <string name="valid_email">Please enter a valid e-mail address!</string>
    <string name="valid_password">Please enter a valid password!</string>
    <string name="ok">OK</string>
    <string name="verify">Verification mail has been sent. Please verify before login!</string>
    <string name="check"> I have read and approve <u>the Terms of User Agreement.</u></string>
    <string name="verify_error">Please login after verify your account!</string>
    <string name="email_password_error">Email or password is not correct!</string>
    <string name="checkbox_error">You must accept the Terms of User Agreement!</string>
    <string name="intent_to_settings">Forwarding to the settings...</string>
    <string name="intent_to_settings_content">You can only change the permissions from the settings.</string>
    <string name="child">Baby</string>
    <string name="parent">Parent</string>
    <string name="normal">Normal</string>
    <string name="performance">Power Saving</string>
    <string name="normal_info">Normal mode provides high quality video and voice transmission!</string>
    <string name="performance_info">Power saving mode minimizes resource consumption by transmitting audio only!</string>
    <string name="choose">Choose a Mode</string>
    <string name="logout"><u>Log Out</u></string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>