<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.ChooseActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="320dp"
        android:background="@drawable/background">
        <TextView
            android:id="@+id/textViewLogout"
            android:layout_width="wrap_content"
            android:text="@string/logout"
            android:layout_margin="20dp"
            android:layout_gravity="end"
            android:textSize="20dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="#f7bfd5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="170dp"
            android:orientation="vertical"
            android:background="@drawable/parent_background"
            android:layout_height="220dp">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/normal"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textColor="@color/baby_blue_green"
                android:layout_height="wrap_content">
            </TextView>
            <ImageButton
                android:id="@+id/imageButtonOnline"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:background="@drawable/video_call" />

        </LinearLayout>
        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"></Space>
        <LinearLayout
            android:layout_width="170dp"
            android:orientation="vertical"
            android:background="@drawable/child_background"
            android:layout_height="220dp">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/performance"
                android:textSize="18dp"
                android:layout_margin="5dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/baby_yellow"
                android:layout_height="wrap_content">
            </TextView>
            <ImageButton
                android:id="@+id/imageButtonPerformance"
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:layout_height="170dp"
                android:background="@drawable/voice" />
        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="170dp"
            android:orientation="vertical"
            android:layout_height="100dp">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/normal_info"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textColor="@color/baby_yellow"
                android:layout_height="wrap_content">
            </TextView>


        </LinearLayout>
        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"></Space>
        <LinearLayout
            android:layout_width="170dp"
            android:orientation="vertical"
            android:layout_height="100dp">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/performance_info"
                android:textSize="14dp"
                android:layout_margin="5dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/baby_blue_green"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>