<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.getstarted1">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="150dp">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/parent"
            android:layout_height="match_parent">

        </ImageView>
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="@drawable/green_back"
        android:orientation="vertical"
        android:layout_height="330dp">
        <TextView
            android:layout_marginTop="45dp"
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/fragment_4_title"
            android:textAlignment="center"
            android:textColor="@color/baby_lilac_bold"
            android:textSize="24sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/textViewWelcomeContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/fragment_4_context"
            android:textAlignment="center"
            android:textColor="@color/baby_lilac_bold"
            android:textSize="16dp"></TextView>
        <Button
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textColor="@color/baby_lilac_bold"
            android:layout_width="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/getStartedButton"
            android:text="@string/get_started"
            android:background="@drawable/secondary_button_background_3"
            android:layout_height="wrap_content">

        </Button>



    </LinearLayout>




</LinearLayout>









